project_2/force-app/main/default/objects/composite_orders__c/composite_orders__c.object-meta.xml
<CustomObject>
    <label>composite orders</label>
    <nameField>
        <label>composite orders</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>composite orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>