project_2/force-app/main/default/objects/composite_orders__c/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>composite orders</relationshipLabel>
    <relationshipName>composite_orders</relationshipName>
    <type>Lookup</type>
</CustomField>