project_2/force-app/main/default/objects/composite_orders__c/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <label>BillToContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>