project_2/force-app/main/default/objects/composite_orders__c/fields/Customer_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_City__c</fullName>
    <label>Customer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>