project_2/force-app/main/default/objects/composite_orders__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <type>Url</type>
</CustomField>