project_2/force-app/main/default/objects/composite_orders__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>