project_2/force-app/main/default/objects/composite_orders__c/fields/Customer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Postal_Code__c</fullName>
    <label>Customer Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>