project_2/force-app/main/default/objects/composite_orders__c/fields/Customer_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_State__c</fullName>
    <label>Customer State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>