project_2/force-app/main/default/objects/composite_orders__c/fields/Customer_Street__c.field-meta.xml
<CustomField>
    <fullName>Customer_Street__c</fullName>
    <label>Customer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>