project_2/force-app/main/default/objects/composite_orders__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>Depth</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>