project_2/force-app/main/default/objects/composite_orders__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>