project_2/force-app/main/default/objects/composite_orders__c/fields/Order_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Purchase_Date__c</fullName>
    <label>Order Purchase Date</label>
    <type>Date</type>
</CustomField>