project_2/force-app/main/default/objects/composite_orders__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>