project_2/force-app/main/default/objects/composite_orders__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>