project_2/force-app/main/default/objects/composite_orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BillToContact__c</columns>
    <columns>Customer_Code__c</columns>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Order_Purchase_Date__c</columns>
    <columns>Customer_Phone__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Price__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>